package exp5;
//@Author：ranxing
//@Time：2022/10/17   19:51
//@File：Angle.java

public class Angle {
    public void drawAngle(){
        System.out.println("画角度");
    }
}
