package exp5;
//@Author：ranxing
//@Time：2022/10/17   19:51
//@File：Circle.java

public class Circle {
    public void draw(){
        System.out.println("画圆");
    }
}
