package exp5;
//@Author：ranxing
//@Time：2022/10/1719:54
//@File：Draw

public interface Draw {
    public void draw();
}
