package exp5;
//@Author：ranxing
//@Time：2022/10/17   19:51
//@File：Line.java

public class Line {
    public void draw(){
        System.out.println("画线");
    }
}
