package exp5;
//@Author：ranxing
//@Time：2022/10/17   19:51
//@File：Rectangle.java

public class Rectangle {
    public void draw(){
        System.out.println("画矩形");
    }
}
